# automatons

./: README.md  pyproject.toml
automatons/cookiecutter/DagonTemplate/: cookiecutter.json
automatons/cookiecutter/DagonTemplate/{{ cookiecutter.project_name }}/: README.md
automatons/cookiecutter/DagonTemplate/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: pyproject.toml
